// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Components - test BoldText - snapshot 1`] = `
<Text
  style={
    {
      "backgroundColor": "red",
      "color": "rgb(28, 28, 30)",
      "fontSize": 18,
      "fontWeight": "bold",
      "opacity": 0.87,
    }
  }
>
  bold text
</Text>
`;

exports[`Component Components - test CurrencyAmount High Privacy - snapshot 1`] = `
<View
  style={
    {
      "alignItems": "baseline",
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityState={
      {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "backgroundColor": "red",
            "color": undefined,
            "fontSize": 20,
          }
        }
      >
        $
      </Text>
      <Text
        style={
          {
            "backgroundColor": "red",
            "color": undefined,
            "fontSize": 20,
            "fontWeight": "700",
          }
        }
      >
         -.--
      </Text>
    </View>
  </View>
</View>
`;

exports[`Component Components - test CurrencyAmount Normal Privacy - snapshot 1`] = `
<View
  style={
    {
      "alignItems": "baseline",
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityState={
      {
        "disabled": true,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "backgroundColor": "red",
            "color": undefined,
            "fontSize": 20,
          }
        }
      >
        $
      </Text>
      <Text
        style={
          {
            "backgroundColor": "red",
            "color": undefined,
            "fontSize": 20,
            "fontWeight": "700",
          }
        }
      >
         44.93
      </Text>
    </View>
  </View>
</View>
`;

exports[`Component Components - test ErrorText - snapshot 1`] = `
<Text
  style={
    {
      "backgroundColor": "white",
      "color": "rgb(0, 122, 255)",
    }
  }
>
  error text
</Text>
`;

exports[`Component Components - test FadeText - snapshot 1`] = `
<Text
  style={
    {
      "backgroundColor": "red",
      "color": "rgb(28, 28, 30)",
      "opacity": 0.65,
    }
  }
>
  fade text
</Text>
`;

exports[`Component Components - test RegText - snapshot 1`] = `
<Text
  onPress={[MockFunction]}
  style={
    {
      "backgroundColor": "white",
      "color": "red",
      "fontSize": 18,
      "fontWeight": "600",
      "opacity": 1,
    }
  }
>
  reg text
</Text>
`;

exports[`Component Components - test ZecAmount High Privacy - snapshot 1`] = `
<View
  style={
    {
      "alignItems": "baseline",
      "backgroundColor": "red",
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityState={
      {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "baseline",
          "backgroundColor": "red",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "color": "red",
            "fontSize": 20,
            "transform": [
              {
                "scale": 2,
              },
              {
                "translateY": 2.4,
              },
            ],
          }
        }
      >
        ᙇ
      </Text>
      <Text
        style={
          {
            "color": "red",
            "fontSize": 20,
            "marginLeft": 2.8000000000000003,
          }
        }
      >
        EC
      </Text>
      <Text
        style={
          {
            "color": "red",
            "fontSize": 20,
            "fontWeight": "700",
          }
        }
      >
         -.----
      </Text>
    </View>
  </View>
</View>
`;

exports[`Component Components - test ZecAmount Normal Privacy - snapshot 1`] = `
<View
  style={
    {
      "alignItems": "baseline",
      "backgroundColor": "red",
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityState={
      {
        "disabled": true,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "baseline",
          "backgroundColor": "red",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "color": "red",
            "fontSize": 20,
            "transform": [
              {
                "scale": 2,
              },
              {
                "translateY": 2.4,
              },
            ],
          }
        }
      >
        ᙇ
      </Text>
      <Text
        style={
          {
            "color": "red",
            "fontSize": 20,
            "marginLeft": 2.8000000000000003,
          }
        }
      >
        EC
      </Text>
      <Text
        style={
          {
            "color": "red",
            "fontSize": 20,
            "fontWeight": "700",
          }
        }
      >
         1.1234
      </Text>
      <Text
        style={
          {
            "color": "red",
            "fontSize": 14,
            "paddingBottom": 0,
          }
        }
      >
        5678
      </Text>
    </View>
  </View>
</View>
`;
